[WIP] tiangolo image

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,16 +3,16 @@ version: "3"
 services:
   web:
     build:
-      ./
+      ${PWD}
     links:
       - db
     ports:
       - "82:80"
     restart: always
-    volumes:
-      - ${PWD}:/app
-    security_opt:
-      - seccomp:unconfined
+    # volumes:
+    #   - ${PWD}:/app
+    # security_opt:
+    #   - seccomp:unconfined
   db:
     image: mysql
     command: --default-authentication-plugin=mysql_native_password
@@ -21,9 +21,9 @@ services:
       MYSQL_ROOT_PASSWORD: Pomme
       MYSQL_DATABASE: shootingclub
     volumes:
-      - ./db:/docker-entrypoint-initdb.d
-    ports:
-      - 3306:3306
+      - ${PWD}/db:/docker-entrypoint-initdb.d
+    # ports:
+    #   - 3306:3306
   adminer:
     image: adminer
     restart: always
